--- a/tivan.toml
+++ b/tivan.toml
@@ -7,6 +7,14 @@
 # to be active. Declaring a plugin means just specifying the name
 # as a section with no variables.
 
+# Use 'tivan -config tivan.toml -test' to see what metrics a config
+# file would generate.
+
+# One rule that plugins conform is wherever a connection string
+# can be passed, the values '' and 'localhost' are treated specially.
+# They indicate to the plugin to use their own builtin configuration to
+# connect to the local system.
+
 # Configuration for influxdb server to send metrics to
 # [influxdb]
 # url = "http://10.20.2.4"
