Tivan is dead, long live Telegraf. Fixes #3

--- a/testdata/influx.toml
+++ b/testdata/influx.toml
@@ -7,7 +7,7 @@ debug = true
 url = "http://localhost:8086"
 username = "root"
 password = "root"
-database = "tivan"
+database = "telegraf"
 tags = { dc = "us-phx-1" }
 
 [redis]
