--- a/telegraf.toml
+++ b/telegraf.toml
@@ -1,9 +1,9 @@
-# Tivan configuration
+# Telegraf configuration
 
 # If this file is missing an [agent] section, you must first generate a
-# valid config with 'tivan -sample-config > tivan.toml'
+# valid config with 'telegraf -sample-config > telegraf.toml'
 
-# Tivan is entirely plugin driven. All metrics are gathered from the
+# Telegraf is entirely plugin driven. All metrics are gathered from the
 # declared plugins.
 
 # Even if a plugin has no configuration, it must be declared in here
@@ -11,7 +11,7 @@
 # as a section with no variables. To deactivate a plugin, comment
 # out the name and any variables.
 
-# Use 'tivan -config tivan.toml -test' to see what metrics a config
+# Use 'telegraf -config telegraf.toml -test' to see what metrics a config
 # file would generate.
 
 # One rule that plugins conform to is wherever a connection string
@@ -28,13 +28,13 @@
 url = "http://10.20.2.4:8086" # required.
 
 # The target database for metrics. This database must already exist
-database = "tivan" # required.
+database = "telegraf" # required.
 
-# username = "tivan"
+# username = "telegraf"
 # password = "metricsmetricsmetricsmetrics"
 
 # Set the user agent for the POSTs (can be useful for log differentiation)
-# user_agent = "tivan"
+# user_agent = "telegraf"
 # tags = { "dc": "us-east-1" }
 
 # Tags can also be specified via a normal map, but only one form at a time:
@@ -42,7 +42,7 @@ database = "tivan" # required.
 # [influxdb.tags]
 # dc = "us-east-1"
 
-# Configuration for tivan itself
+# Configuration for telegraf itself
 # [agent]
 # interval = "10s"
 # debug = false
@@ -83,7 +83,7 @@ servers = ["localhost"]
 # Read metrics about network interface usage
 [net]
 
-# By default, tivan gathers stats from any up interface (excluding loopback)
+# By default, telegraf gathers stats from any up interface (excluding loopback)
 # Setting interfaces will tell it to gather these explicit interfaces,
 # regardless of status.
 #
