Remove unnecessary circleci configuration as we're using default provided services
Update test users to use circleci default services

--- a/circle.yml
+++ b/circle.yml
@@ -1,15 +1,3 @@
-machine:
-  python:
-    version: 2.7.3
-  services:
-    - docker
-
-dependencies:
-  pre:
-    - pip install -U docker-compose==1.2.0
-    - docker-compose pull
-
-
 test:
   override:
-    - make test
+      - go test -short ./...
