Adding Kafka docker container and utilizing it in unit tests

--- a/circle.yml
+++ b/circle.yml
@@ -11,9 +11,13 @@ test:
     - go vet ./...
     # Verify that all files are properly go formatted
     - "[ `git ls-files | grep '.go$' | xargs gofmt -l 2>&1 | wc -l` -eq 0 ]"
+    # Only docker-compose up kafka, the other services are already running
+    # see: https://circleci.com/docs/environment#databases
+    # - docker-compose up -d kafka
   override:
     # Enforce that testutil, cmd, and main directory are fully linted
     - golint .
     - golint testutil/...
     - golint cmd/...
     # TODO run unit tests
+    # - go test -short ./...
