Mark more unit tests as 'integration' tests when they rely on external services/docker

--- a/circle.yml
+++ b/circle.yml
@@ -19,5 +19,6 @@ test:
     - golint .
     - golint testutil/...
     - golint cmd/...
-    # TODO run unit tests
-    # - go test -short ./...
+    # Run short unit tests
+    - go test -v -short ./...
+    # TODO run full unit test suite
