Verify proper go formatting in circleci job

--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,8 @@ test:
   pre:
     # Vet go code for any potential errors
     - go vet ./...
+    # Verify that all files are properly go formatted
+    - "[ `git ls-files | grep '.go$' | xargs gofmt -l 2>&1 | wc -l` -eq 0 ]"
   override:
     # Enforce that testutil, cmd, and main directory are fully linted
     - golint .
