Skip per-cpu unit test when in a circle ci container

--- a/circle.yml
+++ b/circle.yml
@@ -20,5 +20,5 @@ test:
     - golint testutil/...
     - golint cmd/...
     # Run short unit tests
-    - go test -v -short ./...
+    - make test-short
     # TODO run full unit test suite
