--- a/etc/config.sample.toml
+++ b/etc/config.sample.toml
@@ -39,9 +39,7 @@ database = "telegraf" # required.
 # Set the user agent for the POSTs (can be useful for log differentiation)
 # user_agent = "telegraf"
 
-# Tags can also be specified via a normal map, but only one form at a time:
-# [tags]
-# dc = "us-east-1"
+# tags = { "dc" = "us-east-1" }
 
 # Configuration for telegraf itself
 # [agent]
