--- a/etc/config.sample.toml
+++ b/etc/config.sample.toml
@@ -22,11 +22,8 @@
 # NOTE: The configuration has a few required parameters. They are marked
 # with 'required'. Be sure to edit those to make this configuration work.
 
-# OUTPUTS
-[outputs]
-
 # Configuration for influxdb server to send metrics to
-[outputs.influxdb]
+[influxdb]
 # The full HTTP endpoint URL for your InfluxDB instance
 url = "http://localhost:8086" # required.
 
@@ -38,8 +35,12 @@ database = "telegraf" # required.
 
 # Set the user agent for the POSTs (can be useful for log differentiation)
 # user_agent = "telegraf"
+# tags = { "dc": "us-east-1" }
 
-# tags = { "dc" = "us-east-1" }
+# Tags can also be specified via a normal map, but only one form at a time:
+
+# [influxdb.tags]
+# dc = "us-east-1"
 
 # Configuration for telegraf itself
 # [agent]
