--- a/testdata/influx.toml
+++ b/testdata/influx.toml
@@ -3,13 +3,12 @@ interval = "5s"
 http = ":11213"
 debug = true
 
-[outputs]
-[outputs.influxdb]
+[influxdb]
 url = "http://localhost:8086"
 username = "root"
 password = "root"
 database = "telegraf"
-tags = { "dc" = "us-phx-1" }
+tags = { dc = "us-phx-1" }
 
 [redis]
 address = ":6379"
