--- a/etc/config.sample.toml
+++ b/etc/config.sample.toml
@@ -39,7 +39,8 @@ database = "telegraf" # required.
 # Set the user agent for the POSTs (can be useful for log differentiation)
 # user_agent = "telegraf"
 
-# tags = { "dc" = "us-east-1" }
+[tags]
+dc = "us-east-1"
 
 # Configuration for telegraf itself
 # [agent]
