Fixes #128, add system load and swap back to default Telegraf config

--- a/etc/config.sample.toml
+++ b/etc/config.sample.toml
@@ -68,3 +68,9 @@ totalcpu = true
 # Read metrics about memory usage
 [mem]
   # no configuration
+
+[system]
+  # no configuration
+
+[swap]
+  # no configuration
