--- a/etc/config.sample.toml
+++ b/etc/config.sample.toml
@@ -22,55 +22,55 @@
 # NOTE: The configuration has a few required parameters. They are marked
 # with 'required'. Be sure to edit those to make this configuration work.
 
+[tags]
+    # dc = "us-east-1"
+
+# Configuration for telegraf itself
+[agent]
+    interval = "10s"
+    debug = false
+    hostname = ""
+    utc = true
+    precision = "s"
+
 # Configuration for influxdb server to send metrics to
 [outputs]
 [outputs.influxdb]
-# The full HTTP endpoint URL for your InfluxDB instance
-url = "http://localhost:8086" # required.
+    # The full HTTP endpoint URL for your InfluxDB instance
+    url = "http://localhost:8086" # required.
 
-# The target database for metrics. This database must already exist
-database = "telegraf" # required.
+    # The target database for metrics. This database must already exist
+    database = "telegraf" # required.
 
-# username = "telegraf"
-# password = "metricsmetricsmetricsmetrics"
+    # username = "telegraf"
+    # password = "metricsmetricsmetricsmetrics"
 
-# Set the user agent for the POSTs (can be useful for log differentiation)
-# user_agent = "telegraf"
-
-# Tags can also be specified via a normal map, but only one form at a time:
-
-# [influxdb.tags]
-# tags = { "dc" = "us-east-1" }
-
-# Configuration for telegraf itself
-# [agent]
-# interval = "10s"
-# debug = false
-# hostname = "prod3241"
+    # Set the user agent for the POSTs (can be useful for log differentiation)
+    # user_agent = "telegraf"
 
 # PLUGINS
 
 # Read metrics about cpu usage
 [cpu]
-# Whether to report per-cpu stats or not
-percpu = true
-# # Whether to report total system cpu stats or not
-totalcpu = true
+    # Whether to report per-cpu stats or not
+    percpu = true
+    # Whether to report total system cpu stats or not
+    totalcpu = true
 
 # Read metrics about disk usage by mount point
 [disk]
-  # no configuration
+    # no configuration
 
 # Read metrics about disk IO by device
 [io]
-  # no configuration
+    # no configuration
 
 # Read metrics about memory usage
 [mem]
-  # no configuration
+    # no configuration
 
 [system]
-  # no configuration
+    # no configuration
 
 [swap]
-  # no configuration
+    # no configuration
