--- a/scripts/Vagrantfile
+++ b/scripts/Vagrantfile
@@ -7,7 +7,7 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.box = "ubuntu/trusty64"
-  config.vm.synced_folder ".", "/home/vagrant/go/src/github.com/influxdb/telegraf",
+  config.vm.synced_folder "..", "/home/vagrant/go/src/github.com/influxdb/telegraf",
     type: "rsync",
     rsync__args: ["--verbose", "--archive", "--delete", "-z", "--safe-links"],
     rsync__exclude: ["./telegraf", ".vagrant/"]
