--- a/etc/config.sample.toml
+++ b/etc/config.sample.toml
@@ -37,7 +37,7 @@
 [outputs]
 [outputs.influxdb]
     # The full HTTP endpoint URL for your InfluxDB instance
-    url = "http://localhost:8086" # required.
+    urls = ["http://localhost:8086"] # required.
 
     # The target database for metrics. This database must already exist
     database = "telegraf" # required.
