added docker image unit test with OpenTSDB

--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -25,3 +25,9 @@ kafka:
     environment:
         ADVERTISED_HOST:
         ADVERTISED_PORT: 9092
+
+opentsdb:
+    image: lancope/opentsdb
+    ports:
+        - "24242:4242"
+
