AMQP output plugin typo fixes and added README and RoutingTag

--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -26,8 +26,14 @@ kafka:
         ADVERTISED_HOST:
         ADVERTISED_PORT: 9092
 
+rabbitmq:
+    image: rabbitmq:3-management
+    hostname: docker_rabbit
+    ports:
+        - "15672:15672"
+        - "5672:5672"
+
 opentsdb:
     image: lancope/opentsdb
     ports:
         - "24242:4242"
-
