--- a/etc/config.sample.toml
+++ b/etc/config.sample.toml
@@ -1,8 +1,5 @@
 # Telegraf configuration
 
-# If this file is missing an [agent] section, you must first generate a
-# valid config with 'telegraf -sample-config > telegraf.toml'
-
 # Telegraf is entirely plugin driven. All metrics are gathered from the
 # declared plugins.
 
@@ -22,55 +19,86 @@
 # NOTE: The configuration has a few required parameters. They are marked
 # with 'required'. Be sure to edit those to make this configuration work.
 
+# Tags can also be specified via a normal map, but only one form at a time:
 [tags]
-    # dc = "us-east-1"
+	# dc = "us-east-1"
 
-# Configuration for telegraf itself
+# Configuration for telegraf agent
 [agent]
-    interval = "10s"
-    debug = false
-    hostname = ""
-    utc = true
-    precision = "s"
+	# Default data collection interval for all plugins
+	interval = "10s"
+
+	# If utc = false, uses local time (utc is highly recommended)
+	utc = true
+
+	# Precision of writes, valid values are n, u, ms, s, m, and h
+	# note: using second precision greatly helps InfluxDB compression
+	precision = "s"
+
+	# run telegraf in debug mode
+	debug = false
+
+	# Override default hostname, if empty use os.Hostname()
+	hostname = ""
+
+
+###############################################################################
+#                                  OUTPUTS                                    #
+###############################################################################
+
+[outputs]
 
 # Configuration for influxdb server to send metrics to
-[outputs]
 [outputs.influxdb]
-    # The full HTTP endpoint URL for your InfluxDB instance
-    urls = ["http://localhost:8086"] # required.
+	# The full HTTP endpoint URL for your InfluxDB instance
+	# Multiple urls can be specified for InfluxDB cluster support. Server to
+	# write to will be randomly chosen each interval.
+	urls = ["http://localhost:8086"] # required.
 
-    # The target database for metrics. This database must already exist
-    database = "telegraf" # required.
+	# The target database for metrics. This database must already exist
+	database = "telegraf" # required.
 
-    # username = "telegraf"
-    # password = "metricsmetricsmetricsmetrics"
+	# Connection timeout (for the connection with InfluxDB), formatted as a string.
+	# Valid time units are "ns", "us" (or "µs"), "ms", "s", "m", "h".
+	# If not provided, will default to 0 (no timeout)
+	# timeout = "5s"
 
-    # Set the user agent for the POSTs (can be useful for log differentiation)
-    # user_agent = "telegraf"
+	# username = "telegraf"
+	# password = "metricsmetricsmetricsmetrics"
 
-# PLUGINS
+	# Set the user agent for the POSTs (can be useful for log differentiation)
+	# user_agent = "telegraf"
+
+
+###############################################################################
+#                                  PLUGINS                                    #
+###############################################################################
 
 # Read metrics about cpu usage
 [cpu]
-    # Whether to report per-cpu stats or not
-    percpu = true
-    # Whether to report total system cpu stats or not
-    totalcpu = true
+	# Whether to report per-cpu stats or not
+	percpu = true
+	# Whether to report total system cpu stats or not
+	totalcpu = true
+	# Comment this line if you want the raw CPU time metrics
+	drop = ["cpu_time"]
 
 # Read metrics about disk usage by mount point
 [disk]
-    # no configuration
+	# no configuration
 
 # Read metrics about disk IO by device
 [io]
-    # no configuration
+	# no configuration
 
 # Read metrics about memory usage
 [mem]
-    # no configuration
+	# no configuration
 
-[system]
-    # no configuration
-
+# Read metrics about swap memory usage
 [swap]
-    # no configuration
+	# no configuration
+
+# Read metrics about system load & uptime
+[system]
+	# no configuration
