fixes based on comments

--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -42,3 +42,8 @@ redis:
     image: redis
     ports:
         - "6379:6379"
+
+zookeeper:
+    image: spotify/kafka
+    ports:
+        - "2181:2181"
