Replace opentsb docker image with the official one

--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -34,9 +34,9 @@ rabbitmq:
         - "5672:5672"
 
 opentsdb:
-    image: lancope/opentsdb
+    image: petergrace/opentsdb-docker
     ports:
-        - "24242:4242"
+        - "4242:4242"
 
 redis:
     image: redis
