Update README, CHANGELOG, and unit tests with list output

--- a/etc/config.sample.toml
+++ b/etc/config.sample.toml
@@ -52,7 +52,7 @@
 [outputs]
 
 # Configuration for influxdb server to send metrics to
-[outputs.influxdb]
+[[outputs.influxdb]]
   # The full HTTP endpoint URL for your InfluxDB instance
   # Multiple urls can be specified for InfluxDB cluster support. Server to
   # write to will be randomly chosen each interval.
