--- a/testdata/subconfig/memcached.conf
+++ b/testdata/subconfig/memcached.conf
@@ -1,10 +1,9 @@
-[kafka]
-  zookeeperPeers = ["test.example.com:2181"]
-  batchSize = 10000
+[memcached]
+  servers = ["192.168.1.1"]
   pass = ["some", "strings"]
   drop = ["other", "stuff"]
   interval = "5s"
-  [kafka.tagpass]
+  [memcached.tagpass]
     goodtag = ["mytag"]
-  [kafka.tagdrop]
+  [memcached.tagdrop]
     badtag = ["othertag"]
