Overhaul config <-> agent coupling. Put config in it's own package.

--- a/internal/config/testdata/subconfig/exec.conf
+++ b/internal/config/testdata/subconfig/exec.conf
@@ -1,6 +1,6 @@
-[exec]
+[[plugins.exec]]
   # specify commands via an array of tables
-  [[exec.commands]]
+  [[plugins.exec.commands]]
   # the command to run
   command = "/usr/bin/myothercollector --foo=bar"
 
