Fix typo in telegraf.conf
Closes #456.

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -100,7 +100,7 @@
 [[plugins.io]]
   # By default, telegraf will gather stats for all devices including 
   # disk partitions.
-  # Setting devices will restrict the stats to the specified devcies.
+  # Setting devices will restrict the stats to the specified devices.
   # Devices=["sda","sdb"]
   # Uncomment the following line if you do not need disk serial numbers.
   # SkipSerialNumber = true
